// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parser golden fixtures > Depository CAS (NSDL/CDSL, PDF text) > nsdl-cdsl :: 01_nsdl_transaction_statement.txt 1`] = `
{
  "depository": "NSDL",
  "isTxnOnly": false,
  "transactions": [
    {
      "assetClass": "EQUITY",
      "assetName": "RELIANCE INDUSTRIES LIMITED -",
      "broker": "NSDL CAS",
      "isin": "INE002A01018",
      "narration": "15-Jan-2024   Pur-NSE Credit            20           2855.50",
      "price": "2855.5",
      "quantity": "20",
      "stockName": "RELIANCE INDUSTRIES LIMITED -",
      "tradeDate": "2024-01-15",
      "transactionType": "BUY",
    },
    {
      "assetClass": "EQUITY",
      "assetName": "RELIANCE INDUSTRIES LIMITED -",
      "broker": "NSDL CAS",
      "isin": "INE002A01018",
      "narration": "10-Feb-2024   Pur-NSE Credit            15           2902.75",
      "price": "2902.75",
      "quantity": "15",
      "stockName": "RELIANCE INDUSTRIES LIMITED -",
      "tradeDate": "2024-02-10",
      "transactionType": "BUY",
    },
    {
      "assetClass": "EQUITY",
      "assetName": "RELIANCE INDUSTRIES LIMITED -",
      "broker": "NSDL CAS",
      "isin": "INE002A01018",
      "narration": "22-Mar-2024   Sal-NSE Debit             10           2980.25",
      "price": "2980.25",
      "quantity": "10",
      "stockName": "RELIANCE INDUSTRIES LIMITED -",
      "tradeDate": "2024-03-22",
      "transactionType": "SELL",
    },
    {
      "assetClass": "EQUITY",
      "assetName": "TATA CONSULTANCY SERVICES LIMITED -",
      "broker": "NSDL CAS",
      "isin": "INE467B01029",
      "narration": "05-Feb-2024   Pur-NSE Credit            8            3918.50",
      "price": "3918.5",
      "quantity": "8",
      "stockName": "TATA CONSULTANCY SERVICES LIMITED -",
      "tradeDate": "2024-02-05",
      "transactionType": "BUY",
    },
    {
      "assetClass": "EQUITY",
      "assetName": "TATA CONSULTANCY SERVICES LIMITED -",
      "broker": "NSDL CAS",
      "isin": "INE467B01029",
      "narration": "18-Mar-2024   Sal-NSE Debit             5            3965.80",
      "price": "3965.8",
      "quantity": "5",
      "stockName": "TATA CONSULTANCY SERVICES LIMITED -",
      "tradeDate": "2024-03-18",
      "transactionType": "SELL",
    },
  ],
  "warnings": [],
}
`;

exports[`parser golden fixtures > Depository CAS (NSDL/CDSL, PDF text) > nsdl-cdsl :: 02_cdsl_multi_isin.txt 1`] = `
{
  "depository": "CDSL",
  "isTxnOnly": false,
  "transactions": [
    {
      "assetClass": "EQUITY",
      "assetName": "INFOSYS LIMITED -",
      "broker": "CDSL CAS",
      "isin": "INE009A01021",
      "narration": "10-Apr-2023   Purchase                 30           1410.25",
      "price": "1410.25",
      "quantity": "30",
      "stockName": "INFOSYS LIMITED -",
      "tradeDate": "2023-04-10",
      "transactionType": "BUY",
    },
    {
      "assetClass": "EQUITY",
      "assetName": "INFOSYS LIMITED -",
      "broker": "CDSL CAS",
      "isin": "INE009A01021",
      "narration": "15-Jun-2023   Purchase                 20           1365.80",
      "price": "1365.8",
      "quantity": "20",
      "stockName": "INFOSYS LIMITED -",
      "tradeDate": "2023-06-15",
      "transactionType": "BUY",
    },
    {
      "assetClass": "EQUITY",
      "assetName": "HDFC BANK LIMITED -",
      "broker": "CDSL CAS",
      "isin": "INE040A01034",
      "narration": "22-May-2023   Purchase                 25           1678.50",
      "price": "1678.5",
      "quantity": "25",
      "stockName": "HDFC BANK LIMITED -",
      "tradeDate": "2023-05-22",
      "transactionType": "BUY",
    },
    {
      "assetClass": "EQUITY",
      "assetName": "HDFC BANK LIMITED -",
      "broker": "CDSL CAS",
      "isin": "INE040A01034",
      "narration": "08-Nov-2023   Sale                     10           1552.75",
      "price": "1552.75",
      "quantity": "10",
      "stockName": "HDFC BANK LIMITED -",
      "tradeDate": "2023-11-08",
      "transactionType": "SELL",
    },
    {
      "assetClass": "EQUITY",
      "assetName": "BHARTI AIRTEL LIMITED -",
      "broker": "CDSL CAS",
      "isin": "INE397D01024",
      "narration": "12-Sep-2023   Purchase                 40           895.30",
      "price": "895.3",
      "quantity": "40",
      "stockName": "BHARTI AIRTEL LIMITED -",
      "tradeDate": "2023-09-12",
      "transactionType": "BUY",
    },
  ],
  "warnings": [],
}
`;

exports[`parser golden fixtures > Depository CAS (NSDL/CDSL, PDF text) > nsdl-cdsl :: 03_nsdl_bonus_ipo.txt 1`] = `
{
  "depository": "NSDL",
  "isTxnOnly": false,
  "transactions": [
    {
      "assetClass": "EQUITY",
      "assetName": "ICICI BANK LIMITED -",
      "broker": "NSDL CAS",
      "isin": "INE090A01021",
      "narration": "12-Jul-2023   Pur-NSE Credit               50           975.40",
      "price": "975.4",
      "quantity": "50",
      "stockName": "ICICI BANK LIMITED -",
      "tradeDate": "2023-07-12",
      "transactionType": "BUY",
    },
    {
      "assetClass": "EQUITY",
      "assetName": "ICICI BANK LIMITED -",
      "broker": "NSDL CAS",
      "isin": "INE090A01021",
      "narration": "15-Sep-2023   Bonus Credit                 25           0.00",
      "price": "0",
      "quantity": "25",
      "stockName": "ICICI BANK LIMITED -",
      "tradeDate": "2023-09-15",
      "transactionType": "BONUS",
    },
    {
      "assetClass": "EQUITY",
      "assetName": "MAZAGON DOCK SHIPBUILDERS LTD -",
      "broker": "NSDL CAS",
      "isin": "INE249Z01020",
      "narration": "20-Oct-2023   IPO Allotment Credit         100          145.00",
      "price": "145",
      "quantity": "100",
      "stockName": "MAZAGON DOCK SHIPBUILDERS LTD -",
      "tradeDate": "2023-10-20",
      "transactionType": "BUY",
    },
    {
      "assetClass": "EQUITY",
      "assetName": "MAZAGON DOCK SHIPBUILDERS LTD -",
      "broker": "NSDL CAS",
      "isin": "INE249Z01020",
      "narration": "05-Nov-2023   Sal-NSE Debit                100          1820.60",
      "price": "1820.6",
      "quantity": "100",
      "stockName": "MAZAGON DOCK SHIPBUILDERS LTD -",
      "tradeDate": "2023-11-05",
      "transactionType": "SELL",
    },
  ],
  "warnings": [
    "Parsed 4 transactions from NSDL statement; 1 rows had no market rate printed (depository statements often omit per-trade price). Import contract notes to fill in trade prices.",
  ],
}
`;

exports[`parser golden fixtures > Depository CAS (NSDL/CDSL, PDF text) > nsdl-cdsl :: 04_cdsl_holdings_snapshot.txt 1`] = `
{
  "depository": "CDSL",
  "isTxnOnly": false,
  "transactions": [
    {
      "assetClass": "EQUITY",
      "assetName": "STATE BANK OF INDIA -",
      "broker": "CDSL CAS",
      "isin": "INE062A01020",
      "narration": "18-Jan-2024   Purchase                 50           768.25",
      "price": "768.25",
      "quantity": "50",
      "stockName": "STATE BANK OF INDIA -",
      "tradeDate": "2024-01-18",
      "transactionType": "BUY",
    },
    {
      "assetClass": "EQUITY",
      "assetName": "STATE BANK OF INDIA",
      "broker": "CDSL CAS",
      "isin": "INE062A01020",
      "narration": "Opening holding from CDSL statement (cost basis unknown)",
      "price": "0",
      "quantity": "150",
      "stockName": "STATE BANK OF INDIA",
      "tradeDate": "2024-01-31",
      "transactionType": "OPENING_BALANCE",
    },
    {
      "assetClass": "EQUITY",
      "assetName": "RELIANCE INDUSTRIES LIMITED",
      "broker": "CDSL CAS",
      "isin": "INE002A01018",
      "narration": "Opening holding from CDSL statement (cost basis unknown)",
      "price": "0",
      "quantity": "20",
      "stockName": "RELIANCE INDUSTRIES LIMITED",
      "tradeDate": "2024-01-31",
      "transactionType": "OPENING_BALANCE",
    },
    {
      "assetClass": "EQUITY",
      "assetName": "HDFC BANK LIMITED",
      "broker": "CDSL CAS",
      "isin": "INE040A01034",
      "narration": "Opening holding from CDSL statement (cost basis unknown)",
      "price": "0",
      "quantity": "25",
      "stockName": "HDFC BANK LIMITED",
      "tradeDate": "2024-01-31",
      "transactionType": "OPENING_BALANCE",
    },
  ],
  "warnings": [
    "Imported 3 holdings as opening positions dated 2024-01-31. Cost basis is set to 0 because the depository statement only prints current market rate, not purchase price — edit each transaction's price on the Transactions page to match your actual cost for accurate P&L.",
  ],
}
`;

exports[`parser golden fixtures > Depository CAS (NSDL/CDSL, PDF text) > nsdl-cdsl :: 05_nsdl_empty.txt 1`] = `
{
  "depository": "NSDL",
  "isTxnOnly": false,
  "transactions": [],
  "warnings": [
    "No transactions or holdings detected in NSDL statement — if the PDF is password-protected, remove the password and re-upload. If it is a scanned image, depository statements are not yet OCR-supported.",
  ],
}
`;

exports[`parser golden fixtures > MF CAS (CAMS/KFintech, PDF text) > mf-cas :: 01_cams_single_scheme.txt 1`] = `
{
  "transactions": [
    {
      "assetClass": "MUTUAL_FUND",
      "assetName": "HDFC Large Cap Fund - Direct Growth -",
      "isin": "INF179K01YV8",
      "narration": "Purchase              150.234       66.5821      9999.98",
      "price": "66.5821",
      "quantity": "150.234",
      "schemeName": "HDFC Large Cap Fund - Direct Growth -",
      "tradeDate": "2024-01-01",
      "transactionType": "BUY",
    },
    {
      "assetClass": "MUTUAL_FUND",
      "assetName": "HDFC Large Cap Fund - Direct Growth -",
      "isin": "INF179K01YV8",
      "narration": "Purchase              145.678       68.6512      9999.99",
      "price": "68.6512",
      "quantity": "145.678",
      "schemeName": "HDFC Large Cap Fund - Direct Growth -",
      "tradeDate": "2024-02-15",
      "transactionType": "BUY",
    },
    {
      "assetClass": "MUTUAL_FUND",
      "assetName": "HDFC Large Cap Fund - Direct Growth -",
      "isin": "INF179K01YV8",
      "narration": "Purchase              138.902       71.9854      10000.00",
      "price": "71.9854",
      "quantity": "138.902",
      "schemeName": "HDFC Large Cap Fund - Direct Growth -",
      "tradeDate": "2024-03-15",
      "transactionType": "BUY",
    },
  ],
  "warnings": [],
}
`;

exports[`parser golden fixtures > MF CAS (CAMS/KFintech, PDF text) > mf-cas :: 02_kfintech_multi_scheme.txt 1`] = `
{
  "transactions": [
    {
      "assetClass": "MUTUAL_FUND",
      "assetName": "ICICI Prudential Bluechip Fund - Direct Growth -",
      "isin": "INF109K01Q83",
      "narration": "Purchase              245.125       81.5912      19999.97",
      "price": "81.5912",
      "quantity": "245.125",
      "schemeName": "ICICI Prudential Bluechip Fund - Direct Growth -",
      "tradeDate": "2023-04-05",
      "transactionType": "BUY",
    },
    {
      "assetClass": "MUTUAL_FUND",
      "assetName": "ICICI Prudential Bluechip Fund - Direct Growth -",
      "isin": "INF109K01Q83",
      "narration": "SIP Installment       120.456       82.9654      10000.01",
      "price": "82.9654",
      "quantity": "120.456",
      "schemeName": "ICICI Prudential Bluechip Fund - Direct Growth -",
      "tradeDate": "2023-05-05",
      "transactionType": "SIP",
    },
    {
      "assetClass": "MUTUAL_FUND",
      "assetName": "SBI Small Cap Fund - Direct Growth -",
      "isin": "INF200K01T30",
      "narration": "Purchase              85.432        117.0654     10000.00",
      "price": "117.0654",
      "quantity": "85.432",
      "schemeName": "SBI Small Cap Fund - Direct Growth -",
      "tradeDate": "2023-06-10",
      "transactionType": "BUY",
    },
    {
      "assetClass": "MUTUAL_FUND",
      "assetName": "SBI Small Cap Fund - Direct Growth -",
      "isin": "INF200K01T30",
      "narration": "Redemption            -25.000       132.4532     3311.33",
      "price": "132.4532",
      "quantity": "25",
      "schemeName": "SBI Small Cap Fund - Direct Growth -",
      "tradeDate": "2024-01-20",
      "transactionType": "REDEMPTION",
    },
  ],
  "warnings": [],
}
`;

exports[`parser golden fixtures > MF CAS (CAMS/KFintech, PDF text) > mf-cas :: 03_sip_installments.txt 1`] = `
{
  "transactions": [
    {
      "assetClass": "MUTUAL_FUND",
      "assetName": "Axis Midcap Fund - Direct Growth -",
      "isin": "INF846K01EW8",
      "narration": "SIP Installment              89.123        56.1012      5000.00",
      "price": "56.1012",
      "quantity": "89.123",
      "schemeName": "Axis Midcap Fund - Direct Growth -",
      "tradeDate": "2023-10-07",
      "transactionType": "SIP",
    },
    {
      "assetClass": "MUTUAL_FUND",
      "assetName": "Axis Midcap Fund - Direct Growth -",
      "isin": "INF846K01EW8",
      "narration": "SIP Installment              85.654        58.3712      5000.01",
      "price": "58.3712",
      "quantity": "85.654",
      "schemeName": "Axis Midcap Fund - Direct Growth -",
      "tradeDate": "2023-11-07",
      "transactionType": "SIP",
    },
    {
      "assetClass": "MUTUAL_FUND",
      "assetName": "Axis Midcap Fund - Direct Growth -",
      "isin": "INF846K01EW8",
      "narration": "SIP Installment              83.212        60.0912      5000.00",
      "price": "60.0912",
      "quantity": "83.212",
      "schemeName": "Axis Midcap Fund - Direct Growth -",
      "tradeDate": "2023-12-07",
      "transactionType": "SIP",
    },
    {
      "assetClass": "MUTUAL_FUND",
      "assetName": "Axis Midcap Fund - Direct Growth -",
      "isin": "INF846K01EW8",
      "narration": "SIP Installment              81.045        61.6912      5000.00",
      "price": "61.6912",
      "quantity": "81.045",
      "schemeName": "Axis Midcap Fund - Direct Growth -",
      "tradeDate": "2024-01-07",
      "transactionType": "SIP",
    },
    {
      "assetClass": "MUTUAL_FUND",
      "assetName": "Axis Midcap Fund - Direct Growth -",
      "isin": "INF846K01EW8",
      "narration": "SIP Installment              78.654        63.5712      5000.00",
      "price": "63.5712",
      "quantity": "78.654",
      "schemeName": "Axis Midcap Fund - Direct Growth -",
      "tradeDate": "2024-02-07",
      "transactionType": "SIP",
    },
    {
      "assetClass": "MUTUAL_FUND",
      "assetName": "Axis Midcap Fund - Direct Growth -",
      "isin": "INF846K01EW8",
      "narration": "SIP Installment              75.432        66.2812      5000.01",
      "price": "66.2812",
      "quantity": "75.432",
      "schemeName": "Axis Midcap Fund - Direct Growth -",
      "tradeDate": "2024-03-07",
      "transactionType": "SIP",
    },
  ],
  "warnings": [],
}
`;

exports[`parser golden fixtures > MF CAS (CAMS/KFintech, PDF text) > mf-cas :: 04_switch_and_reinvest.txt 1`] = `
{
  "transactions": [
    {
      "assetClass": "MUTUAL_FUND",
      "assetName": "Kotak Flexi Cap Fund - Direct Growth -",
      "isin": "INF174K01LS2",
      "narration": "Purchase                       110.456      72.4512     8002.45",
      "price": "72.4512",
      "quantity": "110.456",
      "schemeName": "Kotak Flexi Cap Fund - Direct Growth -",
      "tradeDate": "2024-01-05",
      "transactionType": "BUY",
    },
    {
      "assetClass": "MUTUAL_FUND",
      "assetName": "Kotak Flexi Cap Fund - Direct Growth -",
      "isin": "INF174K01LS2",
      "narration": "Dividend Reinvestment          2.234        74.1256     165.64",
      "price": "74.1256",
      "quantity": "2.234",
      "schemeName": "Kotak Flexi Cap Fund - Direct Growth -",
      "tradeDate": "2024-02-18",
      "transactionType": "DIVIDEND_REINVEST",
    },
    {
      "assetClass": "MUTUAL_FUND",
      "assetName": "Kotak Flexi Cap Fund - Direct Growth -",
      "isin": "INF174K01LS2",
      "narration": "Switch Out                     -50.000      75.8923     3794.62",
      "price": "75.8923",
      "quantity": "50",
      "schemeName": "Kotak Flexi Cap Fund - Direct Growth -",
      "tradeDate": "2024-03-12",
      "transactionType": "SWITCH_OUT",
    },
    {
      "assetClass": "MUTUAL_FUND",
      "assetName": "Kotak Equity Opportunities Fund - Direct Growth -",
      "isin": "INF174K01HF1",
      "narration": "Switch In                      62.345       60.8723     3794.61",
      "price": "60.8723",
      "quantity": "62.345",
      "schemeName": "Kotak Equity Opportunities Fund - Direct Growth -",
      "tradeDate": "2024-03-12",
      "transactionType": "SWITCH_IN",
    },
  ],
  "warnings": [],
}
`;

exports[`parser golden fixtures > MF CAS (CAMS/KFintech, PDF text) > mf-cas :: 05_no_transactions.txt 1`] = `
{
  "transactions": [],
  "warnings": [
    "No MF transactions detected in CAS PDF — if your CAS is password-protected, remove the password and re-upload",
  ],
}
`;

exports[`parser golden fixtures > Zerodha contract note (PDF text) > zerodha-pdf :: 01_simple_buy.txt 1`] = `
{
  "transactions": [
    {
      "assetClass": "EQUITY",
      "broker": "Zerodha",
      "exchange": "NSE",
      "isin": "INE002A01018",
      "price": "2850.5",
      "quantity": "10",
      "symbol": "RELIANCE",
      "tradeDate": "2024-01-15",
      "transactionType": "BUY",
    },
  ],
  "warnings": [],
}
`;

exports[`parser golden fixtures > Zerodha contract note (PDF text) > zerodha-pdf :: 02_mixed_buy_sell.txt 1`] = `
{
  "transactions": [
    {
      "assetClass": "EQUITY",
      "broker": "Zerodha",
      "exchange": "NSE",
      "isin": "INE467B01029",
      "price": "3920.75",
      "quantity": "5",
      "symbol": "TCS",
      "tradeDate": "2024-02-05",
      "transactionType": "BUY",
    },
    {
      "assetClass": "EQUITY",
      "broker": "Zerodha",
      "exchange": "NSE",
      "isin": "INE009A01021",
      "price": "1655.25",
      "quantity": "12",
      "symbol": "INFY",
      "tradeDate": "2024-02-05",
      "transactionType": "BUY",
    },
    {
      "assetClass": "EQUITY",
      "broker": "Zerodha",
      "exchange": "NSE",
      "isin": "INE040A01034",
      "price": "1525.6",
      "quantity": "8",
      "symbol": "HDFCBANK",
      "tradeDate": "2024-02-05",
      "transactionType": "SELL",
    },
    {
      "assetClass": "EQUITY",
      "broker": "Zerodha",
      "exchange": "NSE",
      "isin": "INE467B01029",
      "price": "3935",
      "quantity": "3",
      "symbol": "TCS",
      "tradeDate": "2024-02-05",
      "transactionType": "SELL",
    },
  ],
  "warnings": [],
}
`;

exports[`parser golden fixtures > Zerodha contract note (PDF text) > zerodha-pdf :: 03_multi_isin.txt 1`] = `
{
  "transactions": [
    {
      "assetClass": "EQUITY",
      "broker": "Zerodha",
      "exchange": "NSE",
      "isin": "INE002A01018",
      "price": "2918.4",
      "quantity": "7",
      "symbol": "RELIANCE",
      "tradeDate": "2024-03-12",
      "transactionType": "BUY",
    },
    {
      "assetClass": "EQUITY",
      "broker": "Zerodha",
      "exchange": "NSE",
      "isin": "INE030A01027",
      "price": "2422.15",
      "quantity": "4",
      "symbol": "HINDUNILVR",
      "tradeDate": "2024-03-12",
      "transactionType": "BUY",
    },
    {
      "assetClass": "EQUITY",
      "broker": "Zerodha",
      "exchange": "NSE",
      "isin": "INE090A01021",
      "price": "1022.3",
      "quantity": "25",
      "symbol": "ICICIBANK",
      "tradeDate": "2024-03-12",
      "transactionType": "BUY",
    },
    {
      "assetClass": "EQUITY",
      "broker": "Zerodha",
      "exchange": "NSE",
      "isin": "INE585B01010",
      "price": "11342.6",
      "quantity": "1",
      "symbol": "MARUTI",
      "tradeDate": "2024-03-12",
      "transactionType": "SELL",
    },
    {
      "assetClass": "EQUITY",
      "broker": "Zerodha",
      "exchange": "NSE",
      "isin": "INE154A01025",
      "price": "443.8",
      "quantity": "45",
      "symbol": "ITC",
      "tradeDate": "2024-03-12",
      "transactionType": "BUY",
    },
  ],
  "warnings": [],
}
`;

exports[`parser golden fixtures > Zerodha contract note (PDF text) > zerodha-pdf :: 04_sell_only.txt 1`] = `
{
  "transactions": [
    {
      "assetClass": "EQUITY",
      "broker": "Zerodha",
      "exchange": "NSE",
      "isin": "INE397D01024",
      "price": "1188.25",
      "quantity": "15",
      "symbol": "BHARTIARTL",
      "tradeDate": "2024-04-18",
      "transactionType": "SELL",
    },
    {
      "assetClass": "EQUITY",
      "broker": "Zerodha",
      "exchange": "NSE",
      "isin": "INE062A01020",
      "price": "765.5",
      "quantity": "20",
      "symbol": "SBIN",
      "tradeDate": "2024-04-18",
      "transactionType": "SELL",
    },
    {
      "assetClass": "EQUITY",
      "broker": "Zerodha",
      "exchange": "NSE",
      "isin": "INE075A01022",
      "price": "452.1",
      "quantity": "30",
      "symbol": "WIPRO",
      "tradeDate": "2024-04-18",
      "transactionType": "SELL",
    },
  ],
  "warnings": [],
}
`;

exports[`parser golden fixtures > Zerodha contract note (PDF text) > zerodha-pdf :: 05_empty_no_trades.txt 1`] = `
{
  "transactions": [],
  "warnings": [
    "No trades detected in Zerodha PDF — file may be scanned image or unsupported format",
  ],
}
`;

exports[`parser golden fixtures > Zerodha contract note (PDF text) > zerodha-pdf :: fno_options_1.txt 1`] = `
{
  "transactions": [
    {
      "assetClass": "OPTIONS",
      "assetName": "NIFTY26N1324500CE",
      "broker": "Zerodha",
      "exchange": "NFO",
      "expiryDate": "2026-11-13",
      "optionType": "CALL",
      "price": "124.5",
      "quantity": "50",
      "strikePrice": "24500",
      "symbol": "NIFTY",
      "tradeDate": "2026-11-12",
      "transactionType": "BUY",
    },
    {
      "assetClass": "OPTIONS",
      "assetName": "NIFTY26N1324500CE",
      "broker": "Zerodha",
      "exchange": "NFO",
      "expiryDate": "2026-11-13",
      "optionType": "CALL",
      "price": "138.2",
      "quantity": "50",
      "strikePrice": "24500",
      "symbol": "NIFTY",
      "tradeDate": "2026-11-12",
      "transactionType": "SELL",
    },
  ],
  "warnings": [],
}
`;

exports[`parser golden fixtures > generic CSV parser > csv :: 01_zerodha_equity_simple.csv 1`] = `
{
  "adapter": "generic.csv",
  "adapterVer": "1",
  "transactions": [
    {
      "amcName": undefined,
      "assetClass": "EQUITY",
      "assetName": undefined,
      "broker": "Zerodha",
      "brokerage": "28.50",
      "exchange": "NSE",
      "exchangeCharges": "0",
      "gst": "0",
      "isin": "INE002A01018",
      "orderNo": "250115000001",
      "otherCharges": "0",
      "price": "2850.50",
      "quantity": "10",
      "schemeCode": undefined,
      "schemeName": undefined,
      "sebiCharges": "0",
      "stampDuty": "0",
      "stockName": undefined,
      "stt": "3.55",
      "symbol": "RELIANCE",
      "tradeDate": "2024-01-15",
      "tradeNo": "250115T001",
      "transactionType": "BUY",
    },
    {
      "amcName": undefined,
      "assetClass": "EQUITY",
      "assetName": undefined,
      "broker": "Zerodha",
      "brokerage": "19.60",
      "exchange": "NSE",
      "exchangeCharges": "0",
      "gst": "0",
      "isin": "INE467B01029",
      "orderNo": "250210000010",
      "otherCharges": "0",
      "price": "3920.75",
      "quantity": "5",
      "schemeCode": undefined,
      "schemeName": undefined,
      "sebiCharges": "0",
      "stampDuty": "0",
      "stockName": undefined,
      "stt": "2.45",
      "symbol": "TCS",
      "tradeDate": "2024-02-10",
      "tradeNo": "250210T015",
      "transactionType": "BUY",
    },
    {
      "amcName": undefined,
      "assetClass": "EQUITY",
      "assetName": undefined,
      "broker": "Zerodha",
      "brokerage": "13.20",
      "exchange": "NSE",
      "exchangeCharges": "0",
      "gst": "0",
      "isin": "INE009A01021",
      "orderNo": "250322000022",
      "otherCharges": "0",
      "price": "1650.00",
      "quantity": "8",
      "schemeCode": undefined,
      "schemeName": undefined,
      "sebiCharges": "0",
      "stampDuty": "0",
      "stockName": undefined,
      "stt": "1.85",
      "symbol": "INFY",
      "tradeDate": "2024-03-22",
      "tradeNo": "250322T031",
      "transactionType": "SELL",
    },
    {
      "amcName": undefined,
      "assetClass": "EQUITY",
      "assetName": undefined,
      "broker": "Zerodha",
      "brokerage": "18.25",
      "exchange": "NSE",
      "exchangeCharges": "0",
      "gst": "0",
      "isin": "INE040A01034",
      "orderNo": "250405000008",
      "otherCharges": "0",
      "price": "1520.40",
      "quantity": "12",
      "schemeCode": undefined,
      "schemeName": undefined,
      "sebiCharges": "0",
      "stampDuty": "0",
      "stockName": undefined,
      "stt": "2.30",
      "symbol": "HDFCBANK",
      "tradeDate": "2024-04-05",
      "tradeNo": "250405T012",
      "transactionType": "BUY",
    },
  ],
  "warnings": [],
}
`;

exports[`parser golden fixtures > generic CSV parser > csv :: 02_mf_sips.csv 1`] = `
{
  "adapter": "generic.csv",
  "adapterVer": "1",
  "transactions": [
    {
      "amcName": "Axis Mutual Fund",
      "assetClass": "MUTUAL_FUND",
      "assetName": undefined,
      "broker": undefined,
      "brokerage": "0",
      "exchange": undefined,
      "exchangeCharges": "0",
      "gst": "0",
      "isin": undefined,
      "orderNo": undefined,
      "otherCharges": "0",
      "price": "48.7890",
      "quantity": "41.123",
      "schemeCode": "100384",
      "schemeName": "Axis Bluechip Fund - Growth",
      "sebiCharges": "0",
      "stampDuty": "0",
      "stockName": undefined,
      "stt": "0",
      "symbol": undefined,
      "tradeDate": "2024-01-05",
      "tradeNo": undefined,
      "transactionType": "SIP",
    },
    {
      "amcName": "Axis Mutual Fund",
      "assetClass": "MUTUAL_FUND",
      "assetName": undefined,
      "broker": undefined,
      "brokerage": "0",
      "exchange": undefined,
      "exchangeCharges": "0",
      "gst": "0",
      "isin": undefined,
      "orderNo": undefined,
      "otherCharges": "0",
      "price": "48.9100",
      "quantity": "40.895",
      "schemeCode": "100384",
      "schemeName": "Axis Bluechip Fund - Growth",
      "sebiCharges": "0",
      "stampDuty": "0",
      "stockName": undefined,
      "stt": "0",
      "symbol": undefined,
      "tradeDate": "2024-02-05",
      "tradeNo": undefined,
      "transactionType": "SIP",
    },
    {
      "amcName": "Axis Mutual Fund",
      "assetClass": "MUTUAL_FUND",
      "assetName": undefined,
      "broker": undefined,
      "brokerage": "0",
      "exchange": undefined,
      "exchangeCharges": "0",
      "gst": "0",
      "isin": undefined,
      "orderNo": undefined,
      "otherCharges": "0",
      "price": "51.1200",
      "quantity": "39.112",
      "schemeCode": "100384",
      "schemeName": "Axis Bluechip Fund - Growth",
      "sebiCharges": "0",
      "stampDuty": "0",
      "stockName": undefined,
      "stt": "0",
      "symbol": undefined,
      "tradeDate": "2024-03-05",
      "tradeNo": undefined,
      "transactionType": "SIP",
    },
    {
      "amcName": "PPFAS Mutual Fund",
      "assetClass": "MUTUAL_FUND",
      "assetName": undefined,
      "broker": undefined,
      "brokerage": "0",
      "exchange": undefined,
      "exchangeCharges": "0",
      "gst": "0",
      "isin": undefined,
      "orderNo": undefined,
      "otherCharges": "0",
      "price": "78.6300",
      "quantity": "25.440",
      "schemeCode": "120465",
      "schemeName": "Parag Parikh Flexi Cap Fund - Direct - Growth",
      "sebiCharges": "0",
      "stampDuty": "0",
      "stockName": undefined,
      "stt": "0",
      "symbol": undefined,
      "tradeDate": "2024-01-10",
      "tradeNo": undefined,
      "transactionType": "SIP",
    },
    {
      "amcName": "PPFAS Mutual Fund",
      "assetClass": "MUTUAL_FUND",
      "assetName": undefined,
      "broker": undefined,
      "brokerage": "0",
      "exchange": undefined,
      "exchangeCharges": "0",
      "gst": "0",
      "isin": undefined,
      "orderNo": undefined,
      "otherCharges": "0",
      "price": "79.1450",
      "quantity": "100.000",
      "schemeCode": "120465",
      "schemeName": "Parag Parikh Flexi Cap Fund - Direct - Growth",
      "sebiCharges": "0",
      "stampDuty": "0",
      "stockName": undefined,
      "stt": "0",
      "symbol": undefined,
      "tradeDate": "2024-03-18",
      "tradeNo": undefined,
      "transactionType": "BUY",
    },
  ],
  "warnings": [],
}
`;

exports[`parser golden fixtures > generic CSV parser > csv :: 03_alias_headers_tsv_style.csv 1`] = `
{
  "adapter": "generic.csv",
  "adapterVer": "1",
  "transactions": [
    {
      "amcName": undefined,
      "assetClass": "EQUITY",
      "assetName": undefined,
      "broker": "ICICI Direct",
      "brokerage": "40.00",
      "exchange": "BSE",
      "exchangeCharges": "0",
      "gst": "0",
      "isin": "INE001A01036",
      "orderNo": undefined,
      "otherCharges": "0",
      "price": "2720.40",
      "quantity": "20",
      "schemeCode": undefined,
      "schemeName": undefined,
      "sebiCharges": "0",
      "stampDuty": "0",
      "stockName": undefined,
      "stt": "0",
      "symbol": "HDFC",
      "tradeDate": "2024-01-15",
      "tradeNo": undefined,
      "transactionType": "BUY",
    },
    {
      "amcName": undefined,
      "assetClass": "EQUITY",
      "assetName": undefined,
      "broker": "ICICI Direct",
      "brokerage": "21.50",
      "exchange": "BSE",
      "exchangeCharges": "0",
      "gst": "0",
      "isin": "INE296A01024",
      "orderNo": undefined,
      "otherCharges": "0",
      "price": "7150.75",
      "quantity": "3",
      "schemeCode": undefined,
      "schemeName": undefined,
      "sebiCharges": "0",
      "stampDuty": "0",
      "stockName": undefined,
      "stt": "0",
      "symbol": "BAJFINANCE",
      "tradeDate": "2024-01-16",
      "tradeNo": undefined,
      "transactionType": "BUY",
    },
    {
      "amcName": undefined,
      "assetClass": "EQUITY",
      "assetName": undefined,
      "broker": "ICICI Direct",
      "brokerage": "30.75",
      "exchange": "NSE",
      "exchangeCharges": "0",
      "gst": "0",
      "isin": "INE062A01020",
      "orderNo": undefined,
      "otherCharges": "0",
      "price": "615.30",
      "quantity": "50",
      "schemeCode": undefined,
      "schemeName": undefined,
      "sebiCharges": "0",
      "stampDuty": "0",
      "stockName": undefined,
      "stt": "0",
      "symbol": "SBIN",
      "tradeDate": "2024-02-20",
      "tradeNo": undefined,
      "transactionType": "SELL",
    },
    {
      "amcName": undefined,
      "assetClass": "EQUITY",
      "assetName": undefined,
      "broker": "ICICI Direct",
      "brokerage": "43.20",
      "exchange": "NSE",
      "exchangeCharges": "0",
      "gst": "0",
      "isin": "INE154A01025",
      "orderNo": undefined,
      "otherCharges": "0",
      "price": "432.10",
      "quantity": "100",
      "schemeCode": undefined,
      "schemeName": undefined,
      "sebiCharges": "0",
      "stampDuty": "0",
      "stockName": undefined,
      "stt": "0",
      "symbol": "ITC",
      "tradeDate": "2024-02-22",
      "tradeNo": undefined,
      "transactionType": "BUY",
    },
    {
      "amcName": undefined,
      "assetClass": "EQUITY",
      "assetName": undefined,
      "broker": "ICICI Direct",
      "brokerage": "27.80",
      "exchange": "NSE",
      "exchangeCharges": "0",
      "gst": "0",
      "isin": "INE018A01030",
      "orderNo": undefined,
      "otherCharges": "0",
      "price": "3480.00",
      "quantity": "4",
      "schemeCode": undefined,
      "schemeName": undefined,
      "sebiCharges": "0",
      "stampDuty": "0",
      "stockName": undefined,
      "stt": "0",
      "symbol": "LT",
      "tradeDate": "2024-02-28",
      "tradeNo": undefined,
      "transactionType": "BUY",
    },
  ],
  "warnings": [],
}
`;

exports[`parser golden fixtures > generic CSV parser > csv :: 04_mixed_with_bad_rows.csv 1`] = `
{
  "adapter": "generic.csv",
  "adapterVer": "1",
  "transactions": [
    {
      "amcName": undefined,
      "assetClass": "EQUITY",
      "assetName": undefined,
      "broker": undefined,
      "brokerage": "0",
      "exchange": undefined,
      "exchangeCharges": "0",
      "gst": "0",
      "isin": "INE075A01022",
      "orderNo": undefined,
      "otherCharges": "0",
      "price": "440.20",
      "quantity": "15",
      "schemeCode": undefined,
      "schemeName": undefined,
      "sebiCharges": "0",
      "stampDuty": "0",
      "stockName": undefined,
      "stt": "0",
      "symbol": "WIPRO",
      "tradeDate": "2024-05-01",
      "tradeNo": undefined,
      "transactionType": "BUY",
    },
    {
      "amcName": undefined,
      "assetClass": "EQUITY",
      "assetName": undefined,
      "broker": undefined,
      "brokerage": "0",
      "exchange": undefined,
      "exchangeCharges": "0",
      "gst": "0",
      "isin": "INE280A01028",
      "orderNo": undefined,
      "otherCharges": "0",
      "price": "3410.50",
      "quantity": "8",
      "schemeCode": undefined,
      "schemeName": undefined,
      "sebiCharges": "0",
      "stampDuty": "0",
      "stockName": undefined,
      "stt": "0",
      "symbol": "TITAN",
      "tradeDate": "2024-05-10",
      "tradeNo": undefined,
      "transactionType": "BUY",
    },
    {
      "amcName": undefined,
      "assetClass": "EQUITY",
      "assetName": undefined,
      "broker": undefined,
      "brokerage": "0",
      "exchange": undefined,
      "exchangeCharges": "0",
      "gst": "0",
      "isin": "INE585B01010",
      "orderNo": undefined,
      "otherCharges": "0",
      "price": "11250.75",
      "quantity": "2",
      "schemeCode": undefined,
      "schemeName": undefined,
      "sebiCharges": "0",
      "stampDuty": "0",
      "stockName": undefined,
      "stt": "0",
      "symbol": "MARUTI",
      "tradeDate": "2024-05-15",
      "tradeNo": undefined,
      "transactionType": "SELL",
    },
    {
      "amcName": undefined,
      "assetClass": "EQUITY",
      "assetName": undefined,
      "broker": undefined,
      "brokerage": "0",
      "exchange": undefined,
      "exchangeCharges": "0",
      "gst": "0",
      "isin": "INE237A01028",
      "orderNo": undefined,
      "otherCharges": "0",
      "price": "1720.30",
      "quantity": "6",
      "schemeCode": undefined,
      "schemeName": undefined,
      "sebiCharges": "0",
      "stampDuty": "0",
      "stockName": undefined,
      "stt": "0",
      "symbol": "KOTAKBANK",
      "tradeDate": "2024-05-20",
      "tradeNo": undefined,
      "transactionType": "BUY",
    },
  ],
  "warnings": [
    "Row 3: skipped (missing/invalid date or quantity)",
    "Row 4: skipped (missing/invalid date or quantity)",
  ],
}
`;

exports[`parser golden fixtures > generic CSV parser > csv :: 05_indian_formatting.csv 1`] = `
{
  "adapter": "generic.csv",
  "adapterVer": "1",
  "transactions": [
    {
      "amcName": undefined,
      "assetClass": "EQUITY",
      "assetName": undefined,
      "broker": undefined,
      "brokerage": "247.50",
      "exchange": "NSE",
      "exchangeCharges": "0",
      "gst": "44.55",
      "isin": "INE239A01016",
      "orderNo": undefined,
      "otherCharges": "0",
      "price": "24750.00",
      "quantity": "1",
      "schemeCode": undefined,
      "schemeName": undefined,
      "sebiCharges": "0",
      "stampDuty": "1.24",
      "stockName": undefined,
      "stt": "2.48",
      "symbol": "NESTLEIND",
      "tradeDate": "2024-01-01",
      "tradeNo": undefined,
      "transactionType": "BUY",
    },
    {
      "amcName": undefined,
      "assetClass": "EQUITY",
      "assetName": undefined,
      "broker": undefined,
      "brokerage": "51.20",
      "exchange": "NSE",
      "exchangeCharges": "0",
      "gst": "9.22",
      "isin": "INE216A01030",
      "orderNo": undefined,
      "otherCharges": "0",
      "price": "5120.00",
      "quantity": "2",
      "schemeCode": undefined,
      "schemeName": undefined,
      "sebiCharges": "0",
      "stampDuty": "0.26",
      "stockName": undefined,
      "stt": "0.51",
      "symbol": "BRITANNIA",
      "tradeDate": "2024-01-05",
      "tradeNo": undefined,
      "transactionType": "BUY",
    },
    {
      "amcName": undefined,
      "assetClass": "EQUITY",
      "assetName": undefined,
      "broker": undefined,
      "brokerage": "24.14",
      "exchange": "NSE",
      "exchangeCharges": "0",
      "gst": "4.35",
      "isin": "INE030A01027",
      "orderNo": undefined,
      "otherCharges": "0",
      "price": "2414.25",
      "quantity": "4",
      "schemeCode": undefined,
      "schemeName": undefined,
      "sebiCharges": "0",
      "stampDuty": "0.12",
      "stockName": undefined,
      "stt": "0.24",
      "symbol": "HINDUNILVR",
      "tradeDate": "2024-01-12",
      "tradeNo": undefined,
      "transactionType": "BUY",
    },
    {
      "amcName": undefined,
      "assetClass": "EQUITY",
      "assetName": undefined,
      "broker": undefined,
      "brokerage": "10.16",
      "exchange": "NSE",
      "exchangeCharges": "0",
      "gst": "1.83",
      "isin": "INE090A01021",
      "orderNo": undefined,
      "otherCharges": "0",
      "price": "1015.60",
      "quantity": "10",
      "schemeCode": undefined,
      "schemeName": undefined,
      "sebiCharges": "0",
      "stampDuty": "0.05",
      "stockName": undefined,
      "stt": "0.10",
      "symbol": "ICICIBANK",
      "tradeDate": "2024-01-18",
      "tradeNo": undefined,
      "transactionType": "BUY",
    },
    {
      "amcName": undefined,
      "assetClass": "EQUITY",
      "assetName": undefined,
      "broker": undefined,
      "brokerage": "9.44",
      "exchange": "NSE",
      "exchangeCharges": "0",
      "gst": "1.70",
      "isin": "INE397D01024",
      "orderNo": undefined,
      "otherCharges": "0",
      "price": "1180.30",
      "quantity": "8",
      "schemeCode": undefined,
      "schemeName": undefined,
      "sebiCharges": "0",
      "stampDuty": "0.05",
      "stockName": undefined,
      "stt": "0.09",
      "symbol": "BHARTIARTL",
      "tradeDate": "2024-01-25",
      "tradeNo": undefined,
      "transactionType": "BUY",
    },
  ],
  "warnings": [],
}
`;

exports[`parser golden fixtures > generic Excel parser > xlsx :: 01_zerodha_equity_simple.xlsx 1`] = `
{
  "adapter": "generic.excel",
  "adapterVer": "1",
  "transactions": [
    {
      "amcName": undefined,
      "assetClass": "EQUITY",
      "assetName": undefined,
      "broker": "Zerodha",
      "brokerage": "28.50",
      "exchange": "NSE",
      "exchangeCharges": "0",
      "gst": "0",
      "isin": "INE002A01018",
      "orderNo": "250115000001",
      "otherCharges": "0",
      "price": "2850.50",
      "quantity": "10",
      "schemeCode": undefined,
      "schemeName": undefined,
      "sebiCharges": "0",
      "stampDuty": "0",
      "stockName": undefined,
      "stt": "3.55",
      "symbol": "RELIANCE",
      "tradeDate": "2024-01-15",
      "tradeNo": "250115T001",
      "transactionType": "BUY",
    },
    {
      "amcName": undefined,
      "assetClass": "EQUITY",
      "assetName": undefined,
      "broker": "Zerodha",
      "brokerage": "19.60",
      "exchange": "NSE",
      "exchangeCharges": "0",
      "gst": "0",
      "isin": "INE467B01029",
      "orderNo": "250210000010",
      "otherCharges": "0",
      "price": "3920.75",
      "quantity": "5",
      "schemeCode": undefined,
      "schemeName": undefined,
      "sebiCharges": "0",
      "stampDuty": "0",
      "stockName": undefined,
      "stt": "2.45",
      "symbol": "TCS",
      "tradeDate": "2024-02-10",
      "tradeNo": "250210T015",
      "transactionType": "BUY",
    },
    {
      "amcName": undefined,
      "assetClass": "EQUITY",
      "assetName": undefined,
      "broker": "Zerodha",
      "brokerage": "13.20",
      "exchange": "NSE",
      "exchangeCharges": "0",
      "gst": "0",
      "isin": "INE009A01021",
      "orderNo": "250322000022",
      "otherCharges": "0",
      "price": "1650.00",
      "quantity": "8",
      "schemeCode": undefined,
      "schemeName": undefined,
      "sebiCharges": "0",
      "stampDuty": "0",
      "stockName": undefined,
      "stt": "1.85",
      "symbol": "INFY",
      "tradeDate": "2024-03-22",
      "tradeNo": "250322T031",
      "transactionType": "SELL",
    },
    {
      "amcName": undefined,
      "assetClass": "EQUITY",
      "assetName": undefined,
      "broker": "Zerodha",
      "brokerage": "18.25",
      "exchange": "NSE",
      "exchangeCharges": "0",
      "gst": "0",
      "isin": "INE040A01034",
      "orderNo": "250405000008",
      "otherCharges": "0",
      "price": "1520.40",
      "quantity": "12",
      "schemeCode": undefined,
      "schemeName": undefined,
      "sebiCharges": "0",
      "stampDuty": "0",
      "stockName": undefined,
      "stt": "2.30",
      "symbol": "HDFCBANK",
      "tradeDate": "2024-04-05",
      "tradeNo": "250405T012",
      "transactionType": "BUY",
    },
  ],
  "warnings": [],
}
`;

exports[`parser golden fixtures > generic Excel parser > xlsx :: 02_mf_sips.xlsx 1`] = `
{
  "adapter": "generic.excel",
  "adapterVer": "1",
  "transactions": [
    {
      "amcName": "Axis Mutual Fund",
      "assetClass": "MUTUAL_FUND",
      "assetName": undefined,
      "broker": undefined,
      "brokerage": "0",
      "exchange": undefined,
      "exchangeCharges": "0",
      "gst": "0",
      "isin": undefined,
      "orderNo": undefined,
      "otherCharges": "0",
      "price": "48.7890",
      "quantity": "41.123",
      "schemeCode": "100384",
      "schemeName": "Axis Bluechip Fund - Growth",
      "sebiCharges": "0",
      "stampDuty": "0",
      "stockName": undefined,
      "stt": "0",
      "symbol": undefined,
      "tradeDate": "2024-01-05",
      "tradeNo": undefined,
      "transactionType": "SIP",
    },
    {
      "amcName": "Axis Mutual Fund",
      "assetClass": "MUTUAL_FUND",
      "assetName": undefined,
      "broker": undefined,
      "brokerage": "0",
      "exchange": undefined,
      "exchangeCharges": "0",
      "gst": "0",
      "isin": undefined,
      "orderNo": undefined,
      "otherCharges": "0",
      "price": "48.9100",
      "quantity": "40.895",
      "schemeCode": "100384",
      "schemeName": "Axis Bluechip Fund - Growth",
      "sebiCharges": "0",
      "stampDuty": "0",
      "stockName": undefined,
      "stt": "0",
      "symbol": undefined,
      "tradeDate": "2024-02-05",
      "tradeNo": undefined,
      "transactionType": "SIP",
    },
    {
      "amcName": "Axis Mutual Fund",
      "assetClass": "MUTUAL_FUND",
      "assetName": undefined,
      "broker": undefined,
      "brokerage": "0",
      "exchange": undefined,
      "exchangeCharges": "0",
      "gst": "0",
      "isin": undefined,
      "orderNo": undefined,
      "otherCharges": "0",
      "price": "51.1200",
      "quantity": "39.112",
      "schemeCode": "100384",
      "schemeName": "Axis Bluechip Fund - Growth",
      "sebiCharges": "0",
      "stampDuty": "0",
      "stockName": undefined,
      "stt": "0",
      "symbol": undefined,
      "tradeDate": "2024-03-05",
      "tradeNo": undefined,
      "transactionType": "SIP",
    },
    {
      "amcName": "PPFAS Mutual Fund",
      "assetClass": "MUTUAL_FUND",
      "assetName": undefined,
      "broker": undefined,
      "brokerage": "0",
      "exchange": undefined,
      "exchangeCharges": "0",
      "gst": "0",
      "isin": undefined,
      "orderNo": undefined,
      "otherCharges": "0",
      "price": "78.6300",
      "quantity": "25.440",
      "schemeCode": "120465",
      "schemeName": "Parag Parikh Flexi Cap Fund - Direct - Growth",
      "sebiCharges": "0",
      "stampDuty": "0",
      "stockName": undefined,
      "stt": "0",
      "symbol": undefined,
      "tradeDate": "2024-01-10",
      "tradeNo": undefined,
      "transactionType": "SIP",
    },
    {
      "amcName": "PPFAS Mutual Fund",
      "assetClass": "MUTUAL_FUND",
      "assetName": undefined,
      "broker": undefined,
      "brokerage": "0",
      "exchange": undefined,
      "exchangeCharges": "0",
      "gst": "0",
      "isin": undefined,
      "orderNo": undefined,
      "otherCharges": "0",
      "price": "79.1450",
      "quantity": "100.000",
      "schemeCode": "120465",
      "schemeName": "Parag Parikh Flexi Cap Fund - Direct - Growth",
      "sebiCharges": "0",
      "stampDuty": "0",
      "stockName": undefined,
      "stt": "0",
      "symbol": undefined,
      "tradeDate": "2024-03-18",
      "tradeNo": undefined,
      "transactionType": "BUY",
    },
  ],
  "warnings": [],
}
`;

exports[`parser golden fixtures > generic Excel parser > xlsx :: 03_alias_headers_tsv_style.xlsx 1`] = `
{
  "adapter": "generic.excel",
  "adapterVer": "1",
  "transactions": [
    {
      "amcName": undefined,
      "assetClass": "EQUITY",
      "assetName": undefined,
      "broker": "ICICI Direct",
      "brokerage": "40.00",
      "exchange": "BSE",
      "exchangeCharges": "0",
      "gst": "0",
      "isin": "INE001A01036",
      "orderNo": undefined,
      "otherCharges": "0",
      "price": "2720.40",
      "quantity": "20",
      "schemeCode": undefined,
      "schemeName": undefined,
      "sebiCharges": "0",
      "stampDuty": "0",
      "stockName": undefined,
      "stt": "0",
      "symbol": "HDFC",
      "tradeDate": "2024-01-15",
      "tradeNo": undefined,
      "transactionType": "BUY",
    },
    {
      "amcName": undefined,
      "assetClass": "EQUITY",
      "assetName": undefined,
      "broker": "ICICI Direct",
      "brokerage": "21.50",
      "exchange": "BSE",
      "exchangeCharges": "0",
      "gst": "0",
      "isin": "INE296A01024",
      "orderNo": undefined,
      "otherCharges": "0",
      "price": "7150.75",
      "quantity": "3",
      "schemeCode": undefined,
      "schemeName": undefined,
      "sebiCharges": "0",
      "stampDuty": "0",
      "stockName": undefined,
      "stt": "0",
      "symbol": "BAJFINANCE",
      "tradeDate": "2024-01-16",
      "tradeNo": undefined,
      "transactionType": "BUY",
    },
    {
      "amcName": undefined,
      "assetClass": "EQUITY",
      "assetName": undefined,
      "broker": "ICICI Direct",
      "brokerage": "30.75",
      "exchange": "NSE",
      "exchangeCharges": "0",
      "gst": "0",
      "isin": "INE062A01020",
      "orderNo": undefined,
      "otherCharges": "0",
      "price": "615.30",
      "quantity": "50",
      "schemeCode": undefined,
      "schemeName": undefined,
      "sebiCharges": "0",
      "stampDuty": "0",
      "stockName": undefined,
      "stt": "0",
      "symbol": "SBIN",
      "tradeDate": "2024-02-20",
      "tradeNo": undefined,
      "transactionType": "SELL",
    },
    {
      "amcName": undefined,
      "assetClass": "EQUITY",
      "assetName": undefined,
      "broker": "ICICI Direct",
      "brokerage": "43.20",
      "exchange": "NSE",
      "exchangeCharges": "0",
      "gst": "0",
      "isin": "INE154A01025",
      "orderNo": undefined,
      "otherCharges": "0",
      "price": "432.10",
      "quantity": "100",
      "schemeCode": undefined,
      "schemeName": undefined,
      "sebiCharges": "0",
      "stampDuty": "0",
      "stockName": undefined,
      "stt": "0",
      "symbol": "ITC",
      "tradeDate": "2024-02-22",
      "tradeNo": undefined,
      "transactionType": "BUY",
    },
    {
      "amcName": undefined,
      "assetClass": "EQUITY",
      "assetName": undefined,
      "broker": "ICICI Direct",
      "brokerage": "27.80",
      "exchange": "NSE",
      "exchangeCharges": "0",
      "gst": "0",
      "isin": "INE018A01030",
      "orderNo": undefined,
      "otherCharges": "0",
      "price": "3480.00",
      "quantity": "4",
      "schemeCode": undefined,
      "schemeName": undefined,
      "sebiCharges": "0",
      "stampDuty": "0",
      "stockName": undefined,
      "stt": "0",
      "symbol": "LT",
      "tradeDate": "2024-02-28",
      "tradeNo": undefined,
      "transactionType": "BUY",
    },
  ],
  "warnings": [],
}
`;

exports[`parser golden fixtures > generic Excel parser > xlsx :: 04_mixed_with_bad_rows.xlsx 1`] = `
{
  "adapter": "generic.excel",
  "adapterVer": "1",
  "transactions": [
    {
      "amcName": undefined,
      "assetClass": "EQUITY",
      "assetName": undefined,
      "broker": undefined,
      "brokerage": "0",
      "exchange": undefined,
      "exchangeCharges": "0",
      "gst": "0",
      "isin": "INE075A01022",
      "orderNo": undefined,
      "otherCharges": "0",
      "price": "440.20",
      "quantity": "15",
      "schemeCode": undefined,
      "schemeName": undefined,
      "sebiCharges": "0",
      "stampDuty": "0",
      "stockName": undefined,
      "stt": "0",
      "symbol": "WIPRO",
      "tradeDate": "2024-05-01",
      "tradeNo": undefined,
      "transactionType": "BUY",
    },
    {
      "amcName": undefined,
      "assetClass": "EQUITY",
      "assetName": undefined,
      "broker": undefined,
      "brokerage": "0",
      "exchange": undefined,
      "exchangeCharges": "0",
      "gst": "0",
      "isin": "INE280A01028",
      "orderNo": undefined,
      "otherCharges": "0",
      "price": "3410.50",
      "quantity": "8",
      "schemeCode": undefined,
      "schemeName": undefined,
      "sebiCharges": "0",
      "stampDuty": "0",
      "stockName": undefined,
      "stt": "0",
      "symbol": "TITAN",
      "tradeDate": "2024-05-10",
      "tradeNo": undefined,
      "transactionType": "BUY",
    },
    {
      "amcName": undefined,
      "assetClass": "EQUITY",
      "assetName": undefined,
      "broker": undefined,
      "brokerage": "0",
      "exchange": undefined,
      "exchangeCharges": "0",
      "gst": "0",
      "isin": "INE585B01010",
      "orderNo": undefined,
      "otherCharges": "0",
      "price": "11250.75",
      "quantity": "2",
      "schemeCode": undefined,
      "schemeName": undefined,
      "sebiCharges": "0",
      "stampDuty": "0",
      "stockName": undefined,
      "stt": "0",
      "symbol": "MARUTI",
      "tradeDate": "2024-05-15",
      "tradeNo": undefined,
      "transactionType": "SELL",
    },
    {
      "amcName": undefined,
      "assetClass": "EQUITY",
      "assetName": undefined,
      "broker": undefined,
      "brokerage": "0",
      "exchange": undefined,
      "exchangeCharges": "0",
      "gst": "0",
      "isin": "INE237A01028",
      "orderNo": undefined,
      "otherCharges": "0",
      "price": "1720.30",
      "quantity": "6",
      "schemeCode": undefined,
      "schemeName": undefined,
      "sebiCharges": "0",
      "stampDuty": "0",
      "stockName": undefined,
      "stt": "0",
      "symbol": "KOTAKBANK",
      "tradeDate": "2024-05-20",
      "tradeNo": undefined,
      "transactionType": "BUY",
    },
  ],
  "warnings": [
    "Row 3: skipped (missing/invalid date or quantity)",
    "Row 4: skipped (missing/invalid date or quantity)",
  ],
}
`;

exports[`parser golden fixtures > generic Excel parser > xlsx :: 05_indian_formatting.xlsx 1`] = `
{
  "adapter": "generic.excel",
  "adapterVer": "1",
  "transactions": [
    {
      "amcName": undefined,
      "assetClass": "EQUITY",
      "assetName": undefined,
      "broker": undefined,
      "brokerage": "247.50",
      "exchange": "NSE",
      "exchangeCharges": "0",
      "gst": "44.55",
      "isin": "INE239A01016",
      "orderNo": undefined,
      "otherCharges": "0",
      "price": "24750.00",
      "quantity": "1",
      "schemeCode": undefined,
      "schemeName": undefined,
      "sebiCharges": "0",
      "stampDuty": "1.24",
      "stockName": undefined,
      "stt": "2.48",
      "symbol": "NESTLEIND",
      "tradeDate": "2024-01-01",
      "tradeNo": undefined,
      "transactionType": "BUY",
    },
    {
      "amcName": undefined,
      "assetClass": "EQUITY",
      "assetName": undefined,
      "broker": undefined,
      "brokerage": "51.20",
      "exchange": "NSE",
      "exchangeCharges": "0",
      "gst": "9.22",
      "isin": "INE216A01030",
      "orderNo": undefined,
      "otherCharges": "0",
      "price": "5120.00",
      "quantity": "2",
      "schemeCode": undefined,
      "schemeName": undefined,
      "sebiCharges": "0",
      "stampDuty": "0.26",
      "stockName": undefined,
      "stt": "0.51",
      "symbol": "BRITANNIA",
      "tradeDate": "2024-01-05",
      "tradeNo": undefined,
      "transactionType": "BUY",
    },
    {
      "amcName": undefined,
      "assetClass": "EQUITY",
      "assetName": undefined,
      "broker": undefined,
      "brokerage": "24.14",
      "exchange": "NSE",
      "exchangeCharges": "0",
      "gst": "4.35",
      "isin": "INE030A01027",
      "orderNo": undefined,
      "otherCharges": "0",
      "price": "2414.25",
      "quantity": "4",
      "schemeCode": undefined,
      "schemeName": undefined,
      "sebiCharges": "0",
      "stampDuty": "0.12",
      "stockName": undefined,
      "stt": "0.24",
      "symbol": "HINDUNILVR",
      "tradeDate": "2024-01-12",
      "tradeNo": undefined,
      "transactionType": "BUY",
    },
    {
      "amcName": undefined,
      "assetClass": "EQUITY",
      "assetName": undefined,
      "broker": undefined,
      "brokerage": "10.16",
      "exchange": "NSE",
      "exchangeCharges": "0",
      "gst": "1.83",
      "isin": "INE090A01021",
      "orderNo": undefined,
      "otherCharges": "0",
      "price": "1015.60",
      "quantity": "10",
      "schemeCode": undefined,
      "schemeName": undefined,
      "sebiCharges": "0",
      "stampDuty": "0.05",
      "stockName": undefined,
      "stt": "0.10",
      "symbol": "ICICIBANK",
      "tradeDate": "2024-01-18",
      "tradeNo": undefined,
      "transactionType": "BUY",
    },
    {
      "amcName": undefined,
      "assetClass": "EQUITY",
      "assetName": undefined,
      "broker": undefined,
      "brokerage": "9.44",
      "exchange": "NSE",
      "exchangeCharges": "0",
      "gst": "1.70",
      "isin": "INE397D01024",
      "orderNo": undefined,
      "otherCharges": "0",
      "price": "1180.30",
      "quantity": "8",
      "schemeCode": undefined,
      "schemeName": undefined,
      "sebiCharges": "0",
      "stampDuty": "0.05",
      "stockName": undefined,
      "stt": "0.09",
      "symbol": "BHARTIARTL",
      "tradeDate": "2024-01-25",
      "tradeNo": undefined,
      "transactionType": "BUY",
    },
  ],
  "warnings": [],
}
`;
